--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,8 @@ dependencies {
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.2.2'
 
 }
+
+
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+}
