--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,10 @@
 jdbc.user=root
-jdbc.password=feixun*123
+#jdbc.password=feixun*123
+jdbc.password=123456
 jdbc.driverClass=com.mysql.jdbc.Driver
-#jdbc.jdbcUrl=jdbc:mysql://localhost/fxmms?useUnicode=true&characterEncoding=UTF-8
-jdbc.jdbcUrl=jdbc:mysql://222.73.156.132:13306/fxmms?useUnicode=true&characterEncoding=UTF-8
+##jdbc.jdbcUrl=jdbc:mysql://localhost/fxmms?useUnicode=true&characterEncoding=UTF-8
+#jdbc.jdbcUrl=jdbc:mysql://222.73.156.132:13306/fxmms?useUnicode=true&characterEncoding=UTF-8
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/fxmms?useUnicode=true&characterEncoding=UTF-8
 
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=20
@@ -11,3 +13,4 @@ dataSource.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ##      local        ##
 #######################
 dataSource.hibernate.show_sql=true
+
